package com.designpatterns.graph.pattern.struct.decorator;

/**
 * @author: jiangjiabin
 * @date: Create in 0:34 2021/11/5
 * @description:
 */
public class Milk extends Decorator {

    public Milk(Drink drink) {
        super(drink);
    }

    @Override
    public String getDesc() {
        return super.getDesc() + " add milk";
    }

    @Override
    public int cost() {
        return super.cost() + 10;
    }

}
